--- a/project-ventum.html
+++ b/project-ventum.html
@@ -112,14 +112,17 @@
 
                     <div class="two_third">
                         <div class="medium-text">
-                            The corporate logo consists in two elements, the symbol and its typography. The symbol is a powerful image that evokes the culture of the company's products - the connection between electrical power and hydraulic fluidity.
+                            Ventum is an app that focus on turning the act of planning and sharing travel plans into a fun experience.
                         </div>
                         <br>
                         <p>
-                          The typography has been carefully chosen for its modern yet refined, highly readable style, which has been enhanced by the use of capital letters. The letter shapes are shaped to compliment and balance perfectly with the logo symbol.
+                          The main goal with the interface was to keep it simple, so the user wouldn’t need to waste time with data input and the experience of planning and registering everything would be quick and easy. The idea was to let the user experiment eveything our app has to offer before, so the user would feel motivated to register.
 <br>
 <br>
-                          The two corporate colors are blue and orange. It is a fresh and appealing blend of complementary colors chosen for its strong combination of modern and classic, a timeless solution.
+                          After some research, it was proposed the word Ventum, from Latin meaning <i>“breeze”<i> or <i>“air”<i>, as the name of the app, due to the idea of freedom and movement that is often connected with the air element.
+                          <br>
+                          <br>
+                          On the icon, the blue inspires a sense of tranquility, and it also resembles the open blue skies for your perfect travel. The traces that goes beyond the limits of the central square indicates the routine break, as well as freedom and movement. It also suggests the mechanics of adding activities to the planning days, just like the interface.
                         </p>
                     </div>
 
