--- a/project-ventum.html
+++ b/project-ventum.html
@@ -119,7 +119,7 @@
                           The main goal with the interface was to keep it simple, so the user wouldn’t need to waste time with data input and the experience of planning and registering everything would be quick and easy. The idea was to let the user experiment eveything our app has to offer before, so the user would feel motivated to register.
 <br>
 <br>
-                          After some research, it was proposed the word Ventum, from Latin meaning <i>“breeze”<i> or <i>“air”<i>, as the name of the app, due to the idea of freedom and movement that is often connected with the air element.
+                          After some research, it was proposed the word Ventum, from Latin meaning <i>“breeze”</i> or <i>“air”</i>, as the name of the app, due to the idea of freedom and movement that is often connected with the air element.
                           <br>
                           <br>
                           On the icon, the blue inspires a sense of tranquility, and it also resembles the open blue skies for your perfect travel. The traces that goes beyond the limits of the central square indicates the routine break, as well as freedom and movement. It also suggests the mechanics of adding activities to the planning days, just like the interface.
