--- a/project-ventum.html
+++ b/project-ventum.html
@@ -120,6 +120,9 @@
                           <br>
                           <br>
                           On the icon, the blue inspires a sense of tranquility, and it also resembles the open blue skies for your perfect travel. The traces that goes beyond the limits of the central square indicates the routine break, as well as freedom and movement. It also suggests the mechanics of adding activities to the planning days, just like the interface.
+                          <br>
+                          <br>
+                                          For more information about the project click <a href="https://www.dropbox.com/s/9c5lk49mw2peybr/VentumDocumentationFinal.pdf?dl=0">here</a>.
                         </p>
                     </div>
 
