--- a/project-cubx.html
+++ b/project-cubx.html
@@ -96,13 +96,13 @@
                     <div id="slider1" class="simple-image-slider-wrapper relative swiper-container" data-speed="1500" data-auto="true">
                         <div class="swiper-wrapper image-slider slider">
                             <div class="swiper-slide">
-                                <img src="images/item_01.jpg" alt="">
+                                <img src="images/rodolfo.workc.001.jpeg" alt="">
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/item_02.jpg" alt="">
+                                <img src="images/CUBX.002.jpeg" alt="">
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/item_03.jpg" alt="">
+                                <img src="images/CUBX.001.jpeg" alt="">
                             </div>
                         </div>
                         <div class="clear"></div>
