--- a/project-cubx.html
+++ b/project-cubx.html
@@ -96,7 +96,7 @@
                     <div id="slider1" class="simple-image-slider-wrapper relative swiper-container" data-speed="1500" data-auto="true">
                         <div class="swiper-wrapper image-slider slider">
                             <div class="swiper-slide">
-                                <img src="rodolfo.workcc.001.jpeg" alt="">
+                                <img src="images/rodolfo.workcc.001.jpeg" alt="">
                             </div>
                             <div class="swiper-slide">
                                 <img src="images/CUBX.002.jpeg" alt="">
