--- a/project-stack-a-flag.html
+++ b/project-stack-a-flag.html
@@ -100,7 +100,7 @@
                                 <img src="images/ipadstack.001.jpeg" alt="">
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/item_02.jpg" alt="">
+                                <img src="images/storyvex.001.jpeg" alt="">
                             </div>
                             <div class="swiper-slide">
                                 <img src="images/stackiphone.002.jpeg" alt="">
