--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
                                     Apple Developer Academy
                                 </div>
                                 <div class="timeline-event-content">
-                                    The Academy is a collaboration between the Pontifical Catholic University of Parana, in partnership with Apple, to develop the skills of students in multidisciplinary fields to successfully develop applications in the Apple ecosystem.
+                                    The Academy is a collaboration between the Pontifical Catholic University of Parana, in partnership with Apple, to develop the skills of students in multidisciplinary fields to successfully develop applications in the Apple ecosystem
                                 </div>
                                 <div class="timeline-event-date">2019 -</div>
                             </li>
@@ -115,7 +115,7 @@
                                     Design School
                                 </div>
                                 <div class="timeline-event-content">
-                                    Rings of Uranus the only home we’ve ever known. Permanence of the stars Tunguska event drake equation encyclopaedia galactica great turbulent
+                                    Bachelor of Design (Digital – Major in UI/UX)
                                 </div>
                                 <div class="timeline-event-date">2017 -</div>
                             </li>
@@ -126,7 +126,7 @@
                                     Renault Experience
                                 </div>
                                 <div class="timeline-event-content">
-                                    Gathered by gravity preserve and cherish that pale blue dot quasar, the carbon in our apple pies pudding
+                                  Top 10 finalist in the Renault Experience 17/18 innovation and entrepreneurship program
                                 </div>
                                 <div class="timeline-event-date">2017/18      </div>
                             </li>
@@ -137,7 +137,7 @@
                                     Law School
                                 </div>
                                 <div class="timeline-event-content">
-                                    Tendrils of gossamer clouds, the ash of stellar alchemy tendrils of true gossamer clouds vangelis the sky calls to us rich in heavy atoms something
+                                    Bachelor of Laws
                                 </div>
                                 <div class="timeline-event-date">2012/17      </div>
                             </li>
@@ -148,7 +148,7 @@
                                     Walt Disney World Resort
                                 </div>
                                 <div class="timeline-event-content">
-                                    Cultural and work exchange, focusing on the development of technical skills in the field of business, language and hospitality.
+                                    Cultural and work exchange, focusing on the development of technical skills in the field of business, language and hospitality
                                 </div>
                                 <div class="timeline-event-date">2014/15      </div>
                             </li>
@@ -171,6 +171,9 @@
                         <br>
                         <br>
                         Currently I'm part of the Apple Developer Academy. It has been a unique and very rewarding opportunity since I’ve been learning a lot about design and developing coding skills.
+                        <br>
+                        <br>
+                        For the whole curriculum click <a href="https://www.dropbox.com/s/4iq2h26q8bzuk6z/Curriculum%20Rodolfo.pdf?dl=0"><u>here</u></a>.
                     </div>
                     <div class="clear"></div>
 
