--- a/project-stack-a-flag.html
+++ b/project-stack-a-flag.html
@@ -112,14 +112,17 @@
 
                     <div class="two_third">
                         <div class="medium-text">
-                            The corporate logo consists in two elements, the symbol and its typography. The symbol is a powerful image that evokes the culture of the company's products - the connection between electrical power and hydraulic fluidity.
+                            Stack A Flag is a digital experience that teaches the first steps of creating layout through SwiftUI, in a visual, fun and universal way.
                         </div>
                         <br>
                         <p>
-                          The typography has been carefully chosen for its modern yet refined, highly readable style, which has been enhanced by the use of capital letters. The letter shapes are shaped to compliment and balance perfectly with the logo symbol.
+                          By using the principle of gamification of knowledge, Stack A Flag allows its user to learn how to create a layout by organizing the colors of the flags, thus evolving learning, and associating their discoveries with programming.
 <br>
 <br>
-                          The two corporate colors are blue and orange. It is a fresh and appealing blend of complementary colors chosen for its strong combination of modern and classic, a timeless solution.
+                          Visually promoting uncomplicated and universal knowledge about programming, contributing to the development of new programmers.
+                          <br>
+                          <br>
+                          This project was submitted to the WWDC20 Swift Student Challenge and turned out to be choosen, among several other creative project, as one of these year's best projects. At the moment the project is being built for iOS devices.
                         </p>
                     </div>
 
