--- a/project-cubx.html
+++ b/project-cubx.html
@@ -128,7 +128,7 @@ Among several creative projects I was one of the award-winning students to go to
                     <div class="one_third last">
                         <div class="info-code">
                             <p class="info-code-title">PROJECT</p>
-                            <p class="info-code-content">WWDC Submission</p>
+                            <p class="info-code-content">WWDC19 Submission</p>
                         </div>
                         <div class="info-code">
                             <p class="info-code-title">FORMAT</p>
