--- a/project-stack-a-flag.html
+++ b/project-stack-a-flag.html
@@ -129,19 +129,19 @@
                     <div class="one_third last">
                         <div class="info-code">
                             <p class="info-code-title">PROJECT</p>
-                            <p class="info-code-content">Logo Redesign</p>
+                            <p class="info-code-content">WWDC20 Submission</p>
                         </div>
                         <div class="info-code">
-                            <p class="info-code-title">CLIENT</p>
-                            <p class="info-code-content">ADS Eletro</p>
+                            <p class="info-code-title">FORMAT</p>
+                            <p class="info-code-content">Playground Book</p>
                         </div>
                         <div class="info-code">
                             <p class="info-code-title">DATE</p>
-                            <p class="info-code-content">2018</p>
+                            <p class="info-code-content">2020</p>
                         </div>
                         <div class="info-code">
                             <p class="info-code-title">LOCATION</p>
-                            <p class="info-code-content">São José dos Pinhais, Brazil</p>
+                            <p class="info-code-content">Curitiba, Brazil</p>
                         </div>
                     </div>
                     <div class="clear"></div>
