--- a/project-juicy-way.html
+++ b/project-juicy-way.html
@@ -100,7 +100,7 @@
                                 <img src="images/juicyway.001.jpeg" alt="">
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/item_02.jpg" alt="">
+                                <img src="images/JuicyLogoVideo.mov" alt="">
                             </div>
                             <div class="swiper-slide">
                                 <img src="images/item_03.jpg" alt="">
@@ -112,11 +112,11 @@
 
                     <div class="two_third">
                         <div class="medium-text">
-                            The corporate logo consists in two elements, the symbol and its typography. The symbol is a powerful image that evokes the culture of the company's products - the connection between electrical power and hydraulic fluidity.
+                            Join this intergalactic run into the Juicy Way! How many light-years can you travel? Challenge yourself and friends in this sweet journey.
                         </div>
                         <br>
                         <p>
-                          The typography has been carefully chosen for its modern yet refined, highly readable style, which has been enhanced by the use of capital letters. The letter shapes are shaped to compliment and balance perfectly with the logo symbol.
+                        Juicy Way is a galactic game that is set on a fruity galaxy. It's a free endless runner 2D experience developed by one designer and one developer.
 <br>
 <br>
                           The two corporate colors are blue and orange. It is a fresh and appealing blend of complementary colors chosen for its strong combination of modern and classic, a timeless solution.
@@ -126,19 +126,19 @@
                     <div class="one_third last">
                         <div class="info-code">
                             <p class="info-code-title">PROJECT</p>
-                            <p class="info-code-content">Logo Redesign</p>
+                            <p class="info-code-content">App</p>
                         </div>
                         <div class="info-code">
                             <p class="info-code-title">CLIENT</p>
-                            <p class="info-code-content">ADS Eletro</p>
+                            <p class="info-code-content">Duo Project at Apple Developer Academy</p>
                         </div>
                         <div class="info-code">
                             <p class="info-code-title">DATE</p>
-                            <p class="info-code-content">2018</p>
+                            <p class="info-code-content">2020</p>
                         </div>
                         <div class="info-code">
                             <p class="info-code-title">LOCATION</p>
-                            <p class="info-code-content">São José dos Pinhais, Brazil</p>
+                            <p class="info-code-content">Curitiba, Brazil</p>
                         </div>
                     </div>
                     <div class="clear"></div>
