--- a/project-juicy-way.html
+++ b/project-juicy-way.html
@@ -100,10 +100,10 @@
                                 <img src="images/juicyway.001.jpeg" alt="">
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/JuicyLogoVideo.mov" alt="">
+                                <img src="images/juicyway.002.jpeg" alt="">
                             </div>
                             <div class="swiper-slide">
-                                <img src="images/item_03.jpg" alt="">
+                                <img src="images/juicyway.003.jpeg" alt="">
                             </div>
                         </div>
                         <div class="clear"></div>
@@ -119,7 +119,7 @@
                         Juicy Way is a galactic game that is set on a fruity galaxy. It's a free endless runner 2D experience developed by one designer and one developer.
 <br>
 <br>
-                          The two corporate colors are blue and orange. It is a fresh and appealing blend of complementary colors chosen for its strong combination of modern and classic, a timeless solution.
+                          The app is in it's first version and you can download it by clicking <a href="https://apps.apple.com/br/app/juicy-way/id1502906162"><u>here</u></a>.
                         </p>
                     </div>
 
