--- a/project-food-app.html
+++ b/project-food-app.html
@@ -112,14 +112,12 @@
 
                     <div class="two_third">
                         <div class="medium-text">
-                            The corporate logo consists in two elements, the symbol and its typography. The symbol is a powerful image that evokes the culture of the company's products - the connection between electrical power and hydraulic fluidity.
+                            This interface was developed based on Ana Miminoshvili's restaurant icon kit and was my first experience using the Adobe XD.
+
                         </div>
                         <br>
                         <p>
-                          The typography has been carefully chosen for its modern yet refined, highly readable style, which has been enhanced by the use of capital letters. The letter shapes are shaped to compliment and balance perfectly with the logo symbol.
-<br>
-<br>
-                          The two corporate colors are blue and orange. It is a fresh and appealing blend of complementary colors chosen for its strong combination of modern and classic, a timeless solution.
+                          The challenge was to rethink the way filters are normaly displayed on mobile interfaces.
                         </p>
                     </div>
 
