--- a/project-sheb.html
+++ b/project-sheb.html
@@ -112,14 +112,11 @@
 
                     <div class="two_third">
                         <div class="medium-text">
-                            The corporate logo consists in two elements, the symbol and its typography. The symbol is a powerful image that evokes the culture of the company's products - the connection between electrical power and hydraulic fluidity.
+                            SHEB’s differential is a close and strong relationship between the firm and it's clients, making SHEB's team accessible and dedicated to the matter.
                         </div>
                         <br>
                         <p>
-                          The typography has been carefully chosen for its modern yet refined, highly readable style, which has been enhanced by the use of capital letters. The letter shapes are shaped to compliment and balance perfectly with the logo symbol.
-<br>
-<br>
-                          SHEB’s differential is a close and strong relationship between the firm and our clients, making our team accessible and dedicated to the matter. In order to meet our client’s needs and give a high-quality service, our lawyers and consultants have years of experience in several areas of knowledge, and also are fluent in several languages, such as English, German, Spanish, and Italian.
+                          In order to meet the client’s needs and give a high-quality service, the lawyers and consultants have years of experience in several areas of knowledge, and also are fluent in several languages, such as English, German, Spanish, and Italian.
                         </p>
                     </div>
 
