--- a/project-food-app.html
+++ b/project-food-app.html
@@ -124,11 +124,7 @@
                     <div class="one_third last">
                         <div class="info-code">
                             <p class="info-code-title">PROJECT</p>
-                            <p class="info-code-content">Logo Redesign</p>
-                        </div>
-                        <div class="info-code">
-                            <p class="info-code-title">CLIENT</p>
-                            <p class="info-code-content">ADS Eletro</p>
+                            <p class="info-code-content">App Interface</p>
                         </div>
                         <div class="info-code">
                             <p class="info-code-title">DATE</p>
@@ -136,7 +132,7 @@
                         </div>
                         <div class="info-code">
                             <p class="info-code-title">LOCATION</p>
-                            <p class="info-code-content">São José dos Pinhais, Brazil</p>
+                            <p class="info-code-content">Curitiba, Brazil</p>
                         </div>
                     </div>
                     <div class="clear"></div>
