--- a/media.html
+++ b/media.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
-        <title>Rodolfo - Blog</title>
+        <title>Rodolfo - Media</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="description" content="Projects and Creations" />
         <meta name="keywords" content="RodolfoDiniz, Design, Portfolio" />
@@ -51,7 +51,7 @@
                             </li>
                             <li>
                                 <span class="menu-num">03</span>
-                                <a href="blog.html">Blog</a>
+                                <a href="media.html">Media</a>
                             </li>
                             <li>
                                 <span class="menu-num">04</span>
