--- a/project-ventum.html
+++ b/project-ventum.html
@@ -51,7 +51,7 @@
                             </li>
                             <li>
                                 <span class="menu-num">03</span>
-                                <a href="blog.html">Blog</a>
+                                <a href="media.html">Media</a>
                             </li>
                             <li>
                                 <span class="menu-num">04</span>
