--- a/about.html
+++ b/about.html
@@ -112,10 +112,10 @@
                             <li class="timeline-event">
                                 <span class="timeline-circle"></span>
                                 <div class="timeline-event-content-title">
-                                    Design School
+                                    Freelance
                                 </div>
                                 <div class="timeline-event-content">
-                                    Bachelor of Design (Digital – Major in UI/UX)
+                                    Working in a range of freelance projects, from graphic design to development
                                 </div>
                                 <div class="timeline-event-date">2017 -</div>
                             </li>
@@ -123,12 +123,12 @@
                             <li class="timeline-event">
                                 <span class="timeline-circle"></span>
                                 <div class="timeline-event-content-title">
-                                    Renault Experience
+                                    Design School
                                 </div>
                                 <div class="timeline-event-content">
-                                  Top 10 finalist in the Renault Experience 17/18 innovation and entrepreneurship program
+                                  Bachelor of Design (Digital – Major in UI/UX)
                                 </div>
-                                <div class="timeline-event-date">2017/18      </div>
+                                <div class="timeline-event-date">2017 -</div>
                             </li>
 
                             <li class="timeline-event">
@@ -148,7 +148,7 @@
                                     Walt Disney World Resort
                                 </div>
                                 <div class="timeline-event-content">
-                                    Cultural and work exchange, focusing on the development of technical skills in the field of business, language and hospitality
+                                    Cultural and work exchange, focusing on the development of technical skills in the field of business, communication and hospitality
                                 </div>
                                 <div class="timeline-event-date">2014/15      </div>
                             </li>
