--- a/about.html
+++ b/about.html
@@ -173,7 +173,7 @@
                         Currently I'm part of the Apple Developer Academy. It has been a unique and very rewarding opportunity since I’ve been learning a lot about design and developing coding skills.
                         <br>
                         <br>
-                        For the whole curriculum click <a href="https://www.dropbox.com/s/4iq2h26q8bzuk6z/Curriculum%20Rodolfo.pdf?dl=0"><u>here</u></a>.
+                        For the whole curriculum click <a href="https://www.dropbox.com/s/n0rfy0c1a8xzwmu/CurriculumRodolfoDinizBiazi-2020.pdf?dl=0"><u>here</u></a>.
                     </div>
                     <div class="clear"></div>
 
