--- a/contact.html
+++ b/contact.html
@@ -119,9 +119,10 @@
                         <br>
 
                         <div class="social-holder">
-                            <a class="social-text" href="#">TWITTER</a>
-                            <a class="social-text" href="#">FACEBOOK</a>
-                            <a class="social-text" href="#">INSTAGRAM</a>
+                            <a class="social-text" href="https://twitter.com/rodolfodiniz">TWITTER</a>
+                            <a class="social-text" href="https://www.facebook.com/rodolfobiazi/">FACEBOOK</a>
+                            <a class="social-text" href="https://www.instagram.com/rodolfodiniz/">INSTAGRAM</a>
+                            <a class="social-text" href="https://www.youtube.com/c/RofsLab/videos">YOUTUBE</a>
                         </div>
 
                     </div>
