--- a/about.html
+++ b/about.html
@@ -82,6 +82,7 @@
                             <a class="social-text" href="https://www.twitter.com/RodolfoDiniz" target="_blank">TWITTER</a>
                             <a class="social-text" href="https://www.facebook.com/RodolfoBiazi" target="_blank">FACEBOOK</a>
                             <a class="social-text" href="https://www.instagram.com/RodolfoDiniz" target="_blank">INSTAGRAM</a>
+                            <a class="social-text" href="https://www.youtube.com/c/RofsLab/videos" target="_blank">YOUTUBE</a>
                         </div>
                     </div>
                 </div>
@@ -181,6 +182,7 @@
                         <a class="social-text" href="https://www.twitter.com/RodolfoDiniz" target="_blank">TWITTER</a>
                         <a class="social-text" href="https://www.facebook.com/RodolfoBiazi" target="_blank">FACEBOOK</a>
                         <a class="social-text" href="https://www.instagram.com/RodolfoDiniz" target="_blank">INSTAGRAM</a>
+                        <a class="social-text" href="https://www.youtube.com/c/RofsLab/videos" target="_blank">YOUTUBE</a>
                     </div>
 
                 </div>
