--- a/contact.html
+++ b/contact.html
@@ -79,9 +79,10 @@
                         </div>
                         <br>
                         <div class="social-holder ">
-                            <a class="social-text" href="https://www.twitter.com/RodolfoDiniz" target="_blank">TWITTER</a>
-                            <a class="social-text" href="https://www.facebook.com/RodolfoBiazi" target="_blank">FACEBOOK</a>
-                            <a class="social-text" href="https://www.instagram.com/RodolfoDiniz" target="_blank">INSTAGRAM</a>
+                          <a class="social-text" href="https://www.twitter.com/RodolfoDiniz" target="_blank">TWITTER</a>
+                          <a class="social-text" href="https://www.facebook.com/RodolfoBiazi" target="_blank">FACEBOOK</a>
+                          <a class="social-text" href="https://www.instagram.com/RodolfoDiniz" target="_blank">INSTAGRAM</a>
+                          <a class="social-text" href="https://www.youtube.com/c/RofsLab/videos" target="_blank">YOUTUBE</a>
                         </div>
                     </div>
                 </div>
@@ -119,10 +120,10 @@
                         <br>
 
                         <div class="social-holder">
-                            <a class="social-text" href="https://twitter.com/rodolfodiniz">TWITTER</a>
-                            <a class="social-text" href="https://www.facebook.com/rodolfobiazi/">FACEBOOK</a>
-                            <a class="social-text" href="https://www.instagram.com/rodolfodiniz/">INSTAGRAM</a>
-                            <a class="social-text" href="https://www.youtube.com/c/RofsLab/videos">YOUTUBE</a>
+                          <a class="social-text" href="https://www.twitter.com/RodolfoDiniz" target="_blank">TWITTER</a>
+                          <a class="social-text" href="https://www.facebook.com/RodolfoBiazi" target="_blank">FACEBOOK</a>
+                          <a class="social-text" href="https://www.instagram.com/RodolfoDiniz" target="_blank">INSTAGRAM</a>
+                          <a class="social-text" href="https://www.youtube.com/c/RofsLab/videos" target="_blank">YOUTUBE</a>
                         </div>
 
                     </div>
