--- a/about.html
+++ b/about.html
@@ -79,10 +79,10 @@
                         </div>
                         <br>
                         <div class="social-holder ">
-                            <a class="social-text" href="https://www.twitter.com/RodolfoDiniz" target="_blank">TWITTER</a>
-                            <a class="social-text" href="https://www.facebook.com/RodolfoBiazi" target="_blank">FACEBOOK</a>
-                            <a class="social-text" href="https://www.instagram.com/RodolfoDiniz" target="_blank">INSTAGRAM</a>
-                            <a class="social-text" href="https://www.youtube.com/c/RofsLab/videos" target="_blank">YOUTUBE</a>
+                          <a class="social-text" href="https://www.twitter.com/RodolfoDiniz" target="_blank">TWITTER</a>
+                          <a class="social-text" href="https://www.instagram.com/RodolfoDiniz" target="_blank">INSTAGRAM</a>
+                          <a class="social-text" href="https://www.youtube.com/c/RofsLab/videos" target="_blank">YOUTUBE</a>
+                          <a class="social-text" href="https://medium.com/@rodolfodinizbiazi" target="_blank">MEDIUM</a>
                         </div>
                     </div>
                 </div>
@@ -179,10 +179,10 @@
                     <div class="clear"></div>
 
                     <div class="social-holder center-text top-60">
-                        <a class="social-text" href="https://www.twitter.com/RodolfoDiniz" target="_blank">TWITTER</a>
-                        <a class="social-text" href="https://www.facebook.com/RodolfoBiazi" target="_blank">FACEBOOK</a>
-                        <a class="social-text" href="https://www.instagram.com/RodolfoDiniz" target="_blank">INSTAGRAM</a>
-                        <a class="social-text" href="https://www.youtube.com/c/RofsLab/videos" target="_blank">YOUTUBE</a>
+                      <a class="social-text" href="https://www.twitter.com/RodolfoDiniz" target="_blank">TWITTER</a>
+                      <a class="social-text" href="https://www.instagram.com/RodolfoDiniz" target="_blank">INSTAGRAM</a>
+                      <a class="social-text" href="https://www.youtube.com/c/RofsLab/videos" target="_blank">YOUTUBE</a>
+                      <a class="social-text" href="https://medium.com/@rodolfodinizbiazi" target="_blank">MEDIUM</a>
                     </div>
 
                 </div>
