--- a/contact.html
+++ b/contact.html
@@ -80,9 +80,9 @@
                         <br>
                         <div class="social-holder ">
                           <a class="social-text" href="https://www.twitter.com/RodolfoDiniz" target="_blank">TWITTER</a>
-                          <a class="social-text" href="https://www.facebook.com/RodolfoBiazi" target="_blank">FACEBOOK</a>
                           <a class="social-text" href="https://www.instagram.com/RodolfoDiniz" target="_blank">INSTAGRAM</a>
                           <a class="social-text" href="https://www.youtube.com/c/RofsLab/videos" target="_blank">YOUTUBE</a>
+                          <a class="social-text" href="https://medium.com/@rodolfodinizbiazi" target="_blank">MEDIUM</a>
                         </div>
                     </div>
                 </div>
@@ -121,9 +121,9 @@
 
                         <div class="social-holder">
                           <a class="social-text" href="https://www.twitter.com/RodolfoDiniz" target="_blank">TWITTER</a>
-                          <a class="social-text" href="https://www.facebook.com/RodolfoBiazi" target="_blank">FACEBOOK</a>
                           <a class="social-text" href="https://www.instagram.com/RodolfoDiniz" target="_blank">INSTAGRAM</a>
                           <a class="social-text" href="https://www.youtube.com/c/RofsLab/videos" target="_blank">YOUTUBE</a>
+                          <a class="social-text" href="https://medium.com/@rodolfodinizbiazi" target="_blank">MEDIUM</a>
                         </div>
 
                     </div>
