--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
                         Stay in touch with me
                     </h1> -->
 
-                    <img class="page-featured-image" src="images/contact2.jpg" alt="" />
+                    <img class="page-featured-image" src="images/contactcover.jpg" alt="" />
 
                     <div class="one_half">
                       <div class="medium-text">
