--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
 
                     <div class="one_half last">
                       <div class="medium-text">
-                      Technology enthusiast and passionate about Design. I like to work on ambitious projects and with people who are passionate with what they do.
+                      Technology enthusiast and passionate about Design. I like to work on ambitious projects and with people who are passionate about what they do.
                       </div>
                       <br>
                         In 2012 I moved to Curitiba to start higher education. Like every young person at this age, I was completely lost as to what career path to pursue and eventually I choose to study Law.
