--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
             <div id="content" class="site-content">
                 <div class="content-holder center-relative content-1170">
                     <h1 class="entry-title page-title center-text">
-                        My name is Rodolfo Diniz <br> and I’m a designer &amp; creator <br>
+                        My name is Rodolfo Diniz Biazi <br> and I’m a designer &amp; creator <br>
                     </h1>
                     <img class="page-featured-image" src="images/about.jpg" alt="" />
 
