--- a/project-cubx.html
+++ b/project-cubx.html
@@ -157,7 +157,7 @@ Among several creative projects I was one of the award-winning students to go to
                     </div>
 
                     <div class="copyright-holder">
-                        © 2020 - Rodolfo
+                        © 2020 - Rodolfo Diniz Biazi
                     </div>
                 </div>
             </footer>
