--- a/project-food-app.html
+++ b/project-food-app.html
@@ -149,7 +149,7 @@
                     </div>
 
                     <div class="copyright-holder">
-                        © 2020 - Rodolfo
+                        © 2020 - Rodolfo Diniz Biazi
                     </div>
                 </div>
             </footer>
