--- a/media.html
+++ b/media.html
@@ -215,7 +215,7 @@
                     </div>
 
                     <div class="copyright-holder">
-                        © 2020 - Rodolfo
+                        © 2020 - Rodolfo Diniz Biazi
                     </div>
                 </div>
             </footer>
