--- a/project-ads.html
+++ b/project-ads.html
@@ -155,7 +155,7 @@
                     </div>
 
                     <div class="copyright-holder">
-                        © 2020 - Rodolfo
+                        © 2020 - Rodolfo Diniz Biazi
                     </div>
                 </div>
             </footer>
