--- a/single.html
+++ b/single.html
@@ -186,7 +186,7 @@
                     </div>
 
                     <div class="copyright-holder">
-                        © 2020 - Rodolfo
+                        © 2020 - Rodolfo Diniz Biazi
                     </div>
                 </div>
             </footer>
