--- a/project-cubx.html
+++ b/project-cubx.html
@@ -8,7 +8,12 @@
         <meta name="author" content="Rodolfo" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <link rel="shortcut icon" href="images/favicon.ico" />
+          <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+          <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+          <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+          <link rel="manifest" href="images/site.webmanifest">
+
+          <!-- <link rel="shortcut icon" href="images/favicon.ico" /> -->
         <link href='https://fonts.googleapis.com/css?family=Work%20Sans:400,500,700%7CUnna:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css"  href='style.css' />
 
