--- a/project-hubli.html
+++ b/project-hubli.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
-        <title>Rodolfo - Contact</title>
+        <title>Rodolfo - ADS Eletro</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="description" content="Projects and Creations" />
         <meta name="keywords" content="RodolfoDiniz, Design, Portfolio" />
@@ -23,7 +23,7 @@
         <![endif]-->
     </head>
 
-    <body class="page-background">
+    <body class="page-background single single-portfolio">
 
         <div class="site-wrapper">
             <div class="doc-loader"></div>
@@ -97,59 +97,54 @@
             <div id="content" class="site-content">
                 <div class="content-holder center-relative content-1170">
                     <!-- <h1 class="entry-title page-title center-text">
-                        Stay in touch with me
+                        ADS Eletro
                     </h1> -->
 
-                    <img class="page-featured-image" src="images/contactcover.jpg" alt="" />
-
-                    <div class="one_half">
-                      <div class="medium-text">
-                          Based in Curitiba.
-                          <br>
-                          Working everywhere.
-                      </div>
-                      <br>
-                        <p>
-                            Connect with me and share what's on your mind and I will gladly answer your questions.
-                        </p>
-                        <!-- <br> -->
-                        <!-- <p>
-                            Galaxies network of wormholes birth extraplanetary Apollonius of Perga adipisci velit! Muse about descended from astronomers.
-                        </p> -->
-                        <br>
-                        <p class="my-info">
-                            <span>Address:</span> Curitiba, Brazil <br>
-                            <span>Phone:</span> +55 41 99708-2777 <br>
-                            <span>Hours:</span> 24/7/365
-                        </p>
-                        <br>
-
-                        <div class="social-holder">
-                          <a class="social-text" href="https://www.twitter.com/RodolfoDiniz" target="_blank">TWITTER</a>
-                          <a class="social-text" href="https://www.instagram.com/RodolfoDiniz" target="_blank">INSTAGRAM</a>
-                          <a class="social-text" href="https://www.youtube.com/c/RofsLab/videos" target="_blank">YOUTUBE</a>
-                          <a class="social-text" href="https://medium.com/@rodolfodinizbiazi" target="_blank">MEDIUM</a>
+                    <div id="slider1" class="simple-image-slider-wrapper relative swiper-container" data-speed="1500" data-auto="true">
+                        <div class="swiper-wrapper image-slider slider">
+                            <div class="swiper-slide">
+                                <img src="images/item_01.jpg" alt="">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="images/item_02.jpg" alt="">
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="images/item_03.jpg" alt="">
+                            </div>
                         </div>
-
+                        <div class="clear"></div>
+                        <div class="swiper-pagination simple-image-slider-pagination swiper-pagination-slider1"></div>
                     </div>
 
-                    <div class="one_half last">
-                        <div class="contact-form">
-                            <p>
-                                <input id="name" type="text" name="your-name" placeholder="Name">
-                            </p>
-                            <p>
-                                <input id="contact-email" type="email" name="your-email" placeholder="Email">
-                            </p>
-                            <p>
-                                <input id="subject" type="text" name="your-subject" placeholder="Subject">
-                            </p>
-                            <p>
-                                <textarea id="message" name="your-message" placeholder="Message"></textarea>
-                            </p>
-                            <p class="contact-submit-holder">
-                                <input type="submit" value="SEND">
-                            </p>
+                    <div class="two_third">
+                        <div class="medium-text">
+                            The corporate logo consists in two elements, the symbol and its typography. The symbol is a powerful image that evokes the culture of the company's products - the connection between electrical power and hydraulic fluidity.
+                        </div>
+                        <br>
+                        <p>
+                          The typography has been carefully chosen for its modern yet refined, highly readable style, which has been enhanced by the use of capital letters. The letter shapes are shaped to compliment and balance perfectly with the logo symbol.
+<br>
+<br>
+                          The two corporate colors are blue and orange. It is a fresh and appealing blend of complementary colors chosen for its strong combination of modern and classic, a timeless solution.
+                        </p>
+                    </div>
+
+                    <div class="one_third last">
+                        <div class="info-code">
+                            <p class="info-code-title">PROJECT</p>
+                            <p class="info-code-content">Logo Redesign</p>
+                        </div>
+                        <div class="info-code">
+                            <p class="info-code-title">CLIENT</p>
+                            <p class="info-code-content">ADS Eletro</p>
+                        </div>
+                        <div class="info-code">
+                            <p class="info-code-title">DATE</p>
+                            <p class="info-code-content">2018</p>
+                        </div>
+                        <div class="info-code">
+                            <p class="info-code-title">LOCATION</p>
+                            <p class="info-code-content">São José dos Pinhais, Brazil</p>
                         </div>
                     </div>
                     <div class="clear"></div>
