--- a/index.html
+++ b/index.html
@@ -149,6 +149,15 @@
   </a>
 </li>
 
+<li class="grid-item p_one animate">
+  <a class="item-link" href="project-hubli.html">
+    <img src="images/home_04a.png" alt="" />
+    <div class="portfolio-text-holder">
+      <p class="portfolio-title">APP</p>
+    </div>
+  </a>
+</li>
+
 <li class="grid-item p_one_hlaf animate">
   <a class="item-link" href="project-stack-a-flag.html">
     <img src="images/StackAFlagCoverImage.png" alt="" />
