--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <li class="grid-item p_one_hlaf animate">
         <a class="item-link" href="project-ventum.html">
        <!-- <a class="item-link" href="https://vimeo.com/199192931" data-rel="prettyPhoto[portfolio]"> -->
-      <img src="images/hubli.jpg" alt="" />
+      <img src="images/ventumlogo.png" alt="" />
       <div class="portfolio-text-holder">
       <p class="portfolio-title">APP</p>
     </div>
@@ -151,7 +151,7 @@
 
 <li class="grid-item p_one animate">
   <a class="item-link" href="project-hubli.html">
-    <img src="images/home_04a.png" alt="" />
+    <img src="images/hubli.jpg" alt="" />
     <div class="portfolio-text-holder">
       <p class="portfolio-title">APP</p>
     </div>
