--- a/project-hubli.html
+++ b/project-hubli.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
-        <title>Rodolfo - ADS Eletro</title>
+        <title>Rodolfo - Hubli</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="description" content="Projects and Creations" />
         <meta name="keywords" content="RodolfoDiniz, Design, Portfolio" />
@@ -132,19 +132,19 @@
                     <div class="one_third last">
                         <div class="info-code">
                             <p class="info-code-title">PROJECT</p>
-                            <p class="info-code-content">Logo Redesign</p>
+                            <p class="info-code-content">App</p>
                         </div>
                         <div class="info-code">
                             <p class="info-code-title">CLIENT</p>
-                            <p class="info-code-content">ADS Eletro</p>
+                            <p class="info-code-content">Group Project at Apple Developer Academy</p>
                         </div>
                         <div class="info-code">
                             <p class="info-code-title">DATE</p>
-                            <p class="info-code-content">2018</p>
+                            <p class="info-code-content">2020</p>
                         </div>
                         <div class="info-code">
                             <p class="info-code-title">LOCATION</p>
-                            <p class="info-code-content">São José dos Pinhais, Brazil</p>
+                            <p class="info-code-content">Curitiba, Brazil</p>
                         </div>
                     </div>
                     <div class="clear"></div>
